Added Level 3 to level select

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -50,7 +50,7 @@ MultipleInstanceLastWidth=540
 LastExecutedLaunchDevice=WindowsNoEditor@JOSEPH-PC
 LastExecutedLaunchName=JOSEPH-PC
 LastExecutedPIEPreviewDevice=
-NewWindowPosition=(X=685,Y=23)
+NewWindowPosition=(X=685,Y=28)
 NewWindowWidth=540
 NewWindowHeight=960
 StandaloneWindowWidth=540
@@ -89,16 +89,17 @@ CurrentPosGridSize=9
 CurrentRotGridSize=6
 
 [MRU]
-MRUItem0=/Game/Levels/Level2
-MRUItem1=/Game/Levels/MainMenu
-MRUItem2=/Game/Levels/Level1
+MRUItem0=/Game/Levels/Level3
+MRUItem1=/Game/Levels/Level2
+MRUItem2=/Game/Levels/MainMenu
 MRUItem3=/Game/Levels/BaseLevel
-MRUItem4=/Game/Levels/Level_2
-MRUItem5=/Game/Levels/PrototypeLevel
-MRUItem6=/Game/Levels/2DSideScrollerExampleMap
-MRUItem7=/Game/2DSideScrollerBP/Levels/2DSideScrollerExampleMap
-MRUItem8=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
-MRUItem9=/Game/2DSideScrollerBP/Assets/Materials/NewWorld
+MRUItem4=/Game/Levels/Level1
+MRUItem5=/Game/Levels/Level_2
+MRUItem6=/Game/Levels/PrototypeLevel
+MRUItem7=/Game/Levels/2DSideScrollerExampleMap
+MRUItem8=/Game/2DSideScrollerBP/Levels/2DSideScrollerExampleMap
+MRUItem9=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem10=/Game/2DSideScrollerBP/Assets/Materials/NewWorld
 
 [LevelSequenceEditor SequencerSettings]
 AutoChangeMode=None
@@ -158,10 +159,10 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Tiles
 
 [EditorStartup]
-LastLevel=/Game/Levels/Level2
+LastLevel=/Game/Levels/Level3
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1667,6 +1668,12 @@ ParticleModuleTrailSource.Cascade=True
 ParticleModuleSpawnPerUnit.Spawn=True
 ParticleModuleSpawnPerUnit.Burst=True
 ParticleModuleSpawnPerUnit.Cascade=True
+MainMenuWidget_C.Designer=True
+BaseLevel_C.Tick=True
+BaseLevel_C.Default=True
+BaseLevel_C.Replication=True
+BaseLevel_C.Input=True
+BaseLevel_C.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
@@ -1740,7 +1747,7 @@ ParticleModuleSpawnPerUnit.Cascade=True
 /Game/Sprites/TileSpriteTJunctionEast.TileSpriteTJunctionEast=0
 /Game/Sprites/TileSpriteTJunctionWest.TileSpriteTJunctionWest=0
 /Game/Blueprints/Bullet.Bullet=0
-/Game/Blueprints/Cannon.Cannon=0
+/Game/Blueprints/Cannon.Cannon=1
 /Game/Sprites/TileSpriteBottom.TileSpriteBottom=0
 /Game/Sprites/TileSpriteCrossroad.TileSpriteCrossroad=0
 /Game/Sprites/TileSpriteEmpty.TileSpriteEmpty=0
@@ -1758,7 +1765,7 @@ ParticleModuleSpawnPerUnit.Cascade=True
 /Game/Blueprints/Tiles/SlowBlock.SlowBlock=1
 /Game/Blueprints/Widgets/HelpWidget.HelpWidget=0
 /Game/Blueprints/Widgets/MainMenuWidget.MainMenuWidget=0
-/Game/Blueprints/Widgets/LevelButtonWidget.LevelButtonWidget=0
+/Game/Blueprints/Widgets/LevelButtonWidget.LevelButtonWidget=1
 /Game/Blueprints/Widgets/HUD.HUD=0
 /Game/Blueprints/Widgets/LevelSelectWidget.LevelSelectWidget=1
 /Game/Blueprints/Widgets/OptionsWidget.OptionsWidget=0
@@ -1819,7 +1826,7 @@ ParticleModuleSpawnPerUnit.Cascade=True
 /Game/Textures/HelpPictures/NormalTilePic.NormalTilePic=1
 /Game/Materials/Player2BulletMaterial.Player2BulletMaterial=0
 /Game/Materials/ParticleMaterial.ParticleMaterial=0
-/Game/Blueprints/BounceGamemode.BounceGamemode=0
+/Game/Blueprints/BounceGamemode.BounceGamemode=1
 /Game/Blueprints/Widgets/GameOverScreenWidget.GameOverScreenWidget=0
 /Game/Textures/GameOverScreenPictures/NextLevelButton.NextLevelButton=1
 /Game/Particles/TargetDestroyedParticles.TargetDestroyedParticles=0
@@ -1827,6 +1834,7 @@ ParticleModuleSpawnPerUnit.Cascade=True
 /Game/Materials/BulletRibbonMaterial.BulletRibbonMaterial=0
 /Game/Particles/TargetTrailParticles.TargetTrailParticles=0
 /Game/Particles/BulletRibbon.BulletRibbon=0
+/Game/Levels/BaseLevel.BaseLevel:PersistentLevel.BaseLevel=1
 
 [DetailPropertyExpansion]
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
@@ -1834,7 +1842,7 @@ MeshComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
-Object="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Yaw\" \"Object.Oscillation.RotOscillation.Roll\" "
+Object=
 StaticMeshActor=
 2DSideScrollerCharacter_C=
 PaperCharacter=
@@ -1849,10 +1857,10 @@ LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridSizes\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget=
+Visual=
 HUD_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
-UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+UserWidget=
 PaperTileSet="\"Object.TileSet.AdditionalSourceTextures\" \"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[15]\" \"Object.Sprite.PerTileData.PerTileData[16]\" \"Object.Sprite.PerTileData.PerTileData[17]\" \"Object.Sprite.PerTileData.PerTileData[20]\" \"Object.Sprite.PerTileData.PerTileData[21]\" \"Object.Sprite.PerTileData.PerTileData[22]\" \"Object.Sprite.PerTileData.PerTileData[23]\" \"Object.Sprite.PerTileData.PerTileData[24]\" "
 MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[0].Object.ParameterValue\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1882,7 +1890,7 @@ Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Objec
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Cannon_C=
-LevelButtonWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+LevelButtonWidget_C=
 MultiLineEditableTextBox="\"Object.Render Transform.RenderTransform\" "
 EditableTextBox="\"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -1890,16 +1898,16 @@ ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle
 PaperSprite="\"Object.Collision.CollisionGeometry.Shapes\" \"Object.Collision.CollisionGeometry.Shapes.Shapes[0]\" "
 BackgroundWidget_C=
 WidgetSwitcher="\"Object.Render Transform.RenderTransform\" "
-MainMenuWidget_C=
+MainMenuWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 OptionsWidget_C="\"Object.Render Transform.RenderTransform\" "
-LevelSelectWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+LevelSelectWidget_C=
 HelpWidget_C="\"Object.Render Transform.RenderTransform\" "
-TileBlueprint_C=
+TileBlueprint_C="\"Object.Default.Waypoints\" "
 Bullet_C=
 ProgressBar="\"Object.Render Transform.RenderTransform\" "
 TimerWidget_C="\"Object.Render Transform.RenderTransform\" "
-GameModeBase=
-Info=
+GameModeBase="\"Object.\" \"Object.\" "
+Info="\"Object.Atmosphere.AtmosphericFogComponent.Object.DefaultLightColor\" "
 HUDWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 GeometryCacheComponent="\"Object.Collision.BodyInstance\" "
 NewTarget_C=
@@ -1938,25 +1946,34 @@ CameraShake="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscil
 ParticleModuleTrailSource="\"Object.Source.SourceStrength.Distribution\" "
 ParticleModuleTrailBase="\"Object.Source.SourceStrength.Distribution\" "
 ParticleModuleSpawnPerUnit="\"Object.Spawn.SpawnPerUnit\" \"Object.Spawn.SpawnPerUnit.Distribution\" "
+BounceGamemode_C="\"Object.\" \"Object.\" "
+TileDoubleWall_C="\"Object.Default.Waypoints\" "
+TileEnd_C="\"Object.Default.Waypoints\" "
+TileWall_C="\"Object.Default.Waypoints\" "
+TileEmpty_C="\"Object.Default.Waypoints\" "
+TileConnectedCorner_C="\"Object.Default.Waypoints\" "
+TileCorner_C="\"Object.Default.Waypoints\" "
+TileWallConnectedCorner1_C="\"Object.Default.Waypoints\" "
+TileWallConnectedCorner2_C="\"Object.Default.Waypoints\" "
 
 [PlacementMode]
-RecentlyPlaced=/Game/Blueprints/Tiles/TileConnectedCorner.TileConnectedCorner;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileWall.TileWall;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileWallConnectedCorner2.TileWallConnectedCorner2;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileCorner.TileCorner;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileWallConnectedCorner1.TileWallConnectedCorner1;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileDoubleWall.TileDoubleWall;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileEnd.TileEnd;
 RecentlyPlaced=/Game/Blueprints/MovementWaypoint.MovementWaypoint;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileSingle.TileSingle;
-RecentlyPlaced=/Game/Particles/Particle_01.Particle_01;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileEnd.TileEnd;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileWallConnectedCorner2.TileWallConnectedCorner2;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileWall.TileWall;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileEmpty.TileEmpty;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleEmpty.TileTriangleEmpty;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileTJunction.TileTJunction;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleConnectedCorner.TileTriangleConnectedCorner;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileConnectedCorner.TileConnectedCorner;
+RecentlyPlaced=/Game/Particles/Particle_01.Particle_01;
 RecentlyPlaced=/Game/Blueprints/Target.Target;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleWall2.TileTriangleWall2;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileCorner.TileCorner;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileEmpty.TileEmpty;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleWall1.TileTriangleWall1;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileWallConnectedCorner1.TileWallConnectedCorner1;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleEmpty.TileTriangleEmpty;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleConnectedCorner.TileTriangleConnectedCorner;
 RecentlyPlaced=/Game/Blueprints/NewTarget.NewTarget;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleSingle.TileTriangleSingle;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileCrossSection.TileCrossSection;
@@ -1977,7 +1994,7 @@ Texture2D.LevelOfDetail=False
 PreviewMaterial.Material=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=MapCheck
 
 [RootWindow]
 ScreenPosition=X=427.000 Y=139.000
@@ -1998,7 +2015,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Tyler/Documents/GitHub/mgp-mgp-group-11/Development/Unreal Project/Content/Levels
+UNR=../../../../../../g11/mgp-mgp-group-11/Development/Unreal Project/Content/Levels
 BRUSH=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
 FBX=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
 FBXAnim=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
@@ -2550,7 +2567,7 @@ BlueprintGraph.TimeStamp=2017.10.04-08.25.01
 BlueprintGraph.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2017.10.04-08.25.24
 SequencerWidgets.LastCompileMethod=External
-HierarchicalLODUtilities.TimeStamp=2017.10.01-15.07.31
+HierarchicalLODUtilities.TimeStamp=2017.10.04-08.25.51
 HierarchicalLODUtilities.LastCompileMethod=External
 ExternalImagePicker.TimeStamp=2017.10.01-15.07.30
 ExternalImagePicker.LastCompileMethod=External
@@ -2653,17 +2670,18 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bi
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 SphereComponent=SphereComponent.Physics.ConstraintsGroup,
-ArrayProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+ArrayProperty=ArrayProperty.DefaultValueCategory.None,
 Cannon_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableGet=
-FloatProperty=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
+FloatProperty=
 LevelButtonWidget_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-IntProperty=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
+IntProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableSet=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 TileBlueprint_C=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
-ObjectProperty=
+ObjectProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 BoolProperty=
 NewTarget_C=
+BounceGamemode_C=ArrayProperty.DefaultValueCategory.None,
 
 [MaterialInstanceEditor]
 LightDir=P=-39.999985 Y=27.499968 R=0.000000
