--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,17 +89,18 @@ CurrentPosGridSize=9
 CurrentRotGridSize=6
 
 [MRU]
-MRUItem0=/Game/Levels/Level3
-MRUItem1=/Game/Levels/Level2
-MRUItem2=/Game/Levels/MainMenu
-MRUItem3=/Game/Levels/BaseLevel
-MRUItem4=/Game/Levels/Level1
-MRUItem5=/Game/Levels/Level_2
-MRUItem6=/Game/Levels/PrototypeLevel
-MRUItem7=/Game/Levels/2DSideScrollerExampleMap
-MRUItem8=/Game/2DSideScrollerBP/Levels/2DSideScrollerExampleMap
-MRUItem9=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
-MRUItem10=/Game/2DSideScrollerBP/Assets/Materials/NewWorld
+MRUItem0=/Game/Levels/Level4
+MRUItem1=/Game/Levels/BaseLevel
+MRUItem2=/Game/Levels/Level3
+MRUItem3=/Game/Levels/Level2
+MRUItem4=/Game/Levels/MainMenu
+MRUItem5=/Game/Levels/Level1
+MRUItem6=/Game/Levels/Level_2
+MRUItem7=/Game/Levels/PrototypeLevel
+MRUItem8=/Game/Levels/2DSideScrollerExampleMap
+MRUItem9=/Game/2DSideScrollerBP/Levels/2DSideScrollerExampleMap
+MRUItem10=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem11=/Game/2DSideScrollerBP/Assets/Materials/NewWorld
 
 [LevelSequenceEditor SequencerSettings]
 AutoChangeMode=None
@@ -162,10 +163,10 @@ AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Tiles
 
 [EditorStartup]
-LastLevel=/Game/Levels/Level3
+LastLevel=/Game/Levels/Level4
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1907,11 +1908,11 @@ Bullet_C=
 ProgressBar="\"Object.Render Transform.RenderTransform\" "
 TimerWidget_C="\"Object.Render Transform.RenderTransform\" "
 GameModeBase="\"Object.\" \"Object.\" "
-Info="\"Object.Atmosphere.AtmosphericFogComponent.Object.DefaultLightColor\" "
+Info="\"Object.\" \"Object.\" "
 HUDWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 GeometryCacheComponent="\"Object.Collision.BodyInstance\" "
 NewTarget_C=
-Target_C=
+Target_C="\"Object.Default.Waypoints\" "
 AtmosphericFog="\"Object.Atmosphere.AtmosphericFogComponent.Object.DefaultLightColor\" "
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstScale\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleSpawnBase="\"Object.Spawn.SpawnPerUnit\" \"Object.Spawn.SpawnPerUnit.Distribution\" "
@@ -1955,27 +1956,32 @@ TileConnectedCorner_C="\"Object.Default.Waypoints\" "
 TileCorner_C="\"Object.Default.Waypoints\" "
 TileWallConnectedCorner1_C="\"Object.Default.Waypoints\" "
 TileWallConnectedCorner2_C="\"Object.Default.Waypoints\" "
+TileTJunction_C="\"Object.Default.Waypoints\" "
+TileTriangleEmpty_C="\"Object.Default.Waypoints\" "
+TileTriangleConnectedCorner_C="\"Object.Default.Waypoints\" "
+TileTriangleWall2_C="\"Object.Default.Waypoints\" "
+TileTriangleSingle_C="\"Object.Default.Waypoints\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/MovementWaypoint.MovementWaypoint;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileSingle.TileSingle;
+RecentlyPlaced=/Game/Blueprints/Target.Target;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileEnd.TileEnd;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTJunction.TileTJunction;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleSingle.TileTriangleSingle;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileDoubleWall.TileDoubleWall;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleWall2.TileTriangleWall2;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleConnectedCorner.TileTriangleConnectedCorner;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleEmpty.TileTriangleEmpty;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileWall.TileWall;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileWallConnectedCorner2.TileWallConnectedCorner2;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileCorner.TileCorner;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileWallConnectedCorner1.TileWallConnectedCorner1;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileDoubleWall.TileDoubleWall;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileEnd.TileEnd;
-RecentlyPlaced=/Game/Blueprints/MovementWaypoint.MovementWaypoint;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileSingle.TileSingle;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileEmpty.TileEmpty;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleEmpty.TileTriangleEmpty;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTJunction.TileTJunction;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleConnectedCorner.TileTriangleConnectedCorner;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileConnectedCorner.TileConnectedCorner;
 RecentlyPlaced=/Game/Particles/Particle_01.Particle_01;
-RecentlyPlaced=/Game/Blueprints/Target.Target;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleWall2.TileTriangleWall2;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleWall1.TileTriangleWall1;
 RecentlyPlaced=/Game/Blueprints/NewTarget.NewTarget;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleSingle.TileTriangleSingle;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileCrossSection.TileCrossSection;
 
 [DetailCategoriesAdvanced]
