Finished level 4, modified base level to include new UI space

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,11 +89,11 @@ CurrentPosGridSize=9
 CurrentRotGridSize=6
 
 [MRU]
-MRUItem0=/Game/Levels/Level4
-MRUItem1=/Game/Levels/BaseLevel
-MRUItem2=/Game/Levels/Level3
-MRUItem3=/Game/Levels/Level2
-MRUItem4=/Game/Levels/MainMenu
+MRUItem0=/Game/Levels/BaseLevel
+MRUItem1=/Game/Levels/Level4
+MRUItem2=/Game/Levels/MainMenu
+MRUItem3=/Game/Levels/Level3
+MRUItem4=/Game/Levels/Level2
 MRUItem5=/Game/Levels/Level1
 MRUItem6=/Game/Levels/Level_2
 MRUItem7=/Game/Levels/PrototypeLevel
@@ -163,7 +163,7 @@ AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Tiles
 
 [EditorStartup]
-LastLevel=/Game/Levels/Level4
+LastLevel=/Game/Levels/BaseLevel
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -1908,7 +1908,7 @@ Bullet_C=
 ProgressBar="\"Object.Render Transform.RenderTransform\" "
 TimerWidget_C="\"Object.Render Transform.RenderTransform\" "
 GameModeBase="\"Object.\" \"Object.\" "
-Info="\"Object.\" \"Object.\" "
+Info="\"Object.Atmosphere.AtmosphericFogComponent.Object.DefaultLightColor\" "
 HUDWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 GeometryCacheComponent="\"Object.Collision.BodyInstance\" "
 NewTarget_C=
@@ -1961,26 +1961,27 @@ TileTriangleEmpty_C="\"Object.Default.Waypoints\" "
 TileTriangleConnectedCorner_C="\"Object.Default.Waypoints\" "
 TileTriangleWall2_C="\"Object.Default.Waypoints\" "
 TileTriangleSingle_C="\"Object.Default.Waypoints\" "
+TileTriangleWall1_C="\"Object.Default.Waypoints\" "
 
 [PlacementMode]
-RecentlyPlaced=/Game/Blueprints/MovementWaypoint.MovementWaypoint;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileSingle.TileSingle;
-RecentlyPlaced=/Game/Blueprints/Target.Target;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileEnd.TileEnd;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTJunction.TileTJunction;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleSingle.TileTriangleSingle;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileDoubleWall.TileDoubleWall;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleWall2.TileTriangleWall2;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleConnectedCorner.TileTriangleConnectedCorner;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleEmpty.TileTriangleEmpty;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileWall.TileWall;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileWallConnectedCorner2.TileWallConnectedCorner2;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileCorner.TileCorner;
+RecentlyPlaced=/Game/Blueprints/MovementWaypoint.MovementWaypoint;
+RecentlyPlaced=/Game/Blueprints/Target.Target;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleSingle.TileTriangleSingle;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleWall1.TileTriangleWall1;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileWallConnectedCorner1.TileWallConnectedCorner1;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileEmpty.TileEmpty;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileWallConnectedCorner2.TileWallConnectedCorner2;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleEmpty.TileTriangleEmpty;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileWall.TileWall;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileConnectedCorner.TileConnectedCorner;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileSingle.TileSingle;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTJunction.TileTJunction;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleWall2.TileTriangleWall2;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleConnectedCorner.TileTriangleConnectedCorner;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileCorner.TileCorner;
 RecentlyPlaced=/Game/Particles/Particle_01.Particle_01;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleWall1.TileTriangleWall1;
 RecentlyPlaced=/Game/Blueprints/NewTarget.NewTarget;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileCrossSection.TileCrossSection;
 
