--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,18 +89,18 @@ CurrentPosGridSize=9
 CurrentRotGridSize=6
 
 [MRU]
-MRUItem0=/Game/Levels/BaseLevel
+MRUItem0=/Game/Levels/Level5
 MRUItem1=/Game/Levels/Level4
-MRUItem2=/Game/Levels/MainMenu
-MRUItem3=/Game/Levels/Level3
-MRUItem4=/Game/Levels/Level2
-MRUItem5=/Game/Levels/Level1
-MRUItem6=/Game/Levels/Level_2
-MRUItem7=/Game/Levels/PrototypeLevel
-MRUItem8=/Game/Levels/2DSideScrollerExampleMap
-MRUItem9=/Game/2DSideScrollerBP/Levels/2DSideScrollerExampleMap
-MRUItem10=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
-MRUItem11=/Game/2DSideScrollerBP/Assets/Materials/NewWorld
+MRUItem2=/Game/Levels/Level3
+MRUItem3=/Game/Levels/MainMenu
+MRUItem4=/Game/Levels/BaseLevel
+MRUItem5=/Game/Levels/Level2
+MRUItem6=/Game/Levels/Level1
+MRUItem7=/Game/Levels/Level_2
+MRUItem8=/Game/Levels/PrototypeLevel
+MRUItem9=/Game/Levels/2DSideScrollerExampleMap
+MRUItem10=/Game/2DSideScrollerBP/Levels/2DSideScrollerExampleMap
+MRUItem11=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [LevelSequenceEditor SequencerSettings]
 AutoChangeMode=None
@@ -163,7 +163,7 @@ AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Tiles
 
 [EditorStartup]
-LastLevel=/Game/Levels/BaseLevel
+LastLevel=/Game/Levels/Level5
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -1908,7 +1908,7 @@ Bullet_C=
 ProgressBar="\"Object.Render Transform.RenderTransform\" "
 TimerWidget_C="\"Object.Render Transform.RenderTransform\" "
 GameModeBase="\"Object.\" \"Object.\" "
-Info="\"Object.Atmosphere.AtmosphericFogComponent.Object.DefaultLightColor\" "
+Info="\"Object.\" \"Object.\" "
 HUDWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 GeometryCacheComponent="\"Object.Collision.BodyInstance\" "
 NewTarget_C=
@@ -1964,23 +1964,23 @@ TileTriangleSingle_C="\"Object.Default.Waypoints\" "
 TileTriangleWall1_C="\"Object.Default.Waypoints\" "
 
 [PlacementMode]
-RecentlyPlaced=/Game/Blueprints/Tiles/TileEnd.TileEnd;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileDoubleWall.TileDoubleWall;
 RecentlyPlaced=/Game/Blueprints/MovementWaypoint.MovementWaypoint;
 RecentlyPlaced=/Game/Blueprints/Target.Target;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileDoubleWall.TileDoubleWall;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTJunction.TileTJunction;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleConnectedCorner.TileTriangleConnectedCorner;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleWall2.TileTriangleWall2;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileSingle.TileSingle;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileCorner.TileCorner;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileWallConnectedCorner2.TileWallConnectedCorner2;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileWallConnectedCorner1.TileWallConnectedCorner1;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleEmpty.TileTriangleEmpty;
+RecentlyPlaced=/Game/Blueprints/Tiles/TileEnd.TileEnd;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleSingle.TileTriangleSingle;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleWall1.TileTriangleWall1;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileWallConnectedCorner1.TileWallConnectedCorner1;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileEmpty.TileEmpty;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileWallConnectedCorner2.TileWallConnectedCorner2;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleEmpty.TileTriangleEmpty;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileWall.TileWall;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileConnectedCorner.TileConnectedCorner;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileSingle.TileSingle;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTJunction.TileTJunction;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleWall2.TileTriangleWall2;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileTriangleConnectedCorner.TileTriangleConnectedCorner;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileCorner.TileCorner;
 RecentlyPlaced=/Game/Particles/Particle_01.Particle_01;
 RecentlyPlaced=/Game/Blueprints/NewTarget.NewTarget;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileCrossSection.TileCrossSection;
@@ -2682,7 +2682,7 @@ Cannon_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValue
 K2Node_VariableGet=
 FloatProperty=
 LevelButtonWidget_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-IntProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+IntProperty=ArrayProperty.DefaultValueCategory.None,
 K2Node_VariableSet=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 TileBlueprint_C=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
 ObjectProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
