Added level 6 (to be completed), adjusted UI positions to use blank space

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,18 +89,18 @@ CurrentPosGridSize=9
 CurrentRotGridSize=6
 
 [MRU]
-MRUItem0=/Game/Levels/Level5
-MRUItem1=/Game/Levels/Level4
-MRUItem2=/Game/Levels/Level3
-MRUItem3=/Game/Levels/MainMenu
-MRUItem4=/Game/Levels/BaseLevel
-MRUItem5=/Game/Levels/Level2
-MRUItem6=/Game/Levels/Level1
-MRUItem7=/Game/Levels/Level_2
-MRUItem8=/Game/Levels/PrototypeLevel
-MRUItem9=/Game/Levels/2DSideScrollerExampleMap
-MRUItem10=/Game/2DSideScrollerBP/Levels/2DSideScrollerExampleMap
-MRUItem11=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem0=/Game/Levels/Level6
+MRUItem1=/Game/Levels/BaseLevel_5
+MRUItem2=/Game/Levels/Level5
+MRUItem3=/Game/Levels/Level4
+MRUItem4=/Game/Levels/Level3
+MRUItem5=/Game/Levels/MainMenu
+MRUItem6=/Game/Levels/BaseLevel
+MRUItem7=/Game/Levels/Level2
+MRUItem8=/Game/Levels/Level1
+MRUItem9=/Game/Levels/Level_2
+MRUItem10=/Game/Levels/PrototypeLevel
+MRUItem11=/Game/Levels/2DSideScrollerExampleMap
 
 [LevelSequenceEditor SequencerSettings]
 AutoChangeMode=None
@@ -163,10 +163,11 @@ AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Tiles
 
 [EditorStartup]
-LastLevel=/Game/Levels/Level5
+LastLevel=/Game/Levels/BaseLevel_5
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/Widgets/HUDWidget.HUDWidget
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1843,7 +1844,7 @@ MeshComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
-Object=
+Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 StaticMeshActor=
 2DSideScrollerCharacter_C=
 PaperCharacter=
@@ -1858,8 +1859,8 @@ LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridSizes\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget=
-Visual=
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HUD_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 UserWidget=
 PaperTileSet="\"Object.TileSet.AdditionalSourceTextures\" \"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[15]\" \"Object.Sprite.PerTileData.PerTileData[16]\" \"Object.Sprite.PerTileData.PerTileData[17]\" \"Object.Sprite.PerTileData.PerTileData[20]\" \"Object.Sprite.PerTileData.PerTileData[21]\" \"Object.Sprite.PerTileData.PerTileData[22]\" \"Object.Sprite.PerTileData.PerTileData[23]\" \"Object.Sprite.PerTileData.PerTileData[24]\" "
@@ -1889,7 +1890,7 @@ LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.Tra
 PaperSpriteComponent="\"Object.Collision.BodyInstance\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Cannon_C=
 LevelButtonWidget_C=
 MultiLineEditableTextBox="\"Object.Render Transform.RenderTransform\" "
