--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -163,10 +163,11 @@ AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Tiles
 
 [EditorStartup]
-LastLevel=/Game/Levels/Level1
+LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/Bullet.Bullet
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1884,6 +1885,8 @@ TileWallSlanted2_C.TransformCommon=True
 /Game/Blueprints/Tiles/TileEmptySlanted.TileEmptySlanted=1
 /Game/Blueprints/Tiles/TileWallSlanted1.TileWallSlanted1=1
 /Game/Blueprints/Tiles/TileWallSlanted2.TileWallSlanted2=1
+/Game/Sprites/TileTriangleSingle.TileTriangleSingle=1
+/Game/Sprites/TileSingle.TileSingle=1
 
 [DetailPropertyExpansion]
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
