Added Bullet Bounce and Bullet Destroyed sound effects

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -160,14 +160,14 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Tiles
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 
 [EditorStartup]
 LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/Bullet.Bullet
+OpenAssetsAtExit=/Game/Blueprints/Tiles/TileBlueprint.TileBlueprint
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1715,6 +1715,17 @@ TileCornerSlanted_C.TransformCommon=True
 TileEmptySlanted_C.TransformCommon=True
 TileWallSlanted1_C.TransformCommon=True
 TileWallSlanted2_C.TransformCommon=True
+SoundWave.Compression=True
+SoundWave.SoundWave=True
+SoundWave.Streaming=True
+SoundWave.Subtitles=True
+SoundWave.Sound=True
+SoundWave.Info=True
+SoundWave.File Path=True
+SoundWave.Debug=True
+SoundWave.Concurrency=True
+SoundWave.Attenuation=True
+SoundWave.Effects=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
@@ -1887,6 +1898,7 @@ TileWallSlanted2_C.TransformCommon=True
 /Game/Blueprints/Tiles/TileWallSlanted2.TileWallSlanted2=1
 /Game/Sprites/TileTriangleSingle.TileTriangleSingle=1
 /Game/Sprites/TileSingle.TileSingle=1
+/Game/Audio/BulletDestroy.BulletDestroy=1
 
 [DetailPropertyExpansion]
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
@@ -2083,7 +2095,7 @@ UNR=../../../../../../Users/Tyler/Documents/GitHub/mgp-mgp-group-11/Development/
 BRUSH=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
 FBX=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
 FBXAnim=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
-GenericImport=../../../../../../Users/Tyler/Desktop/TileSet.png
+GenericImport=../../../../../../Users/Tyler/Desktop/BulletDestroy.wav
 GenericExport=../../../../../../Users/Tyler/Desktop/TileSet.TGA
 GenericOpen=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
 GenericSave=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
