Added Target Destroyed noise

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -160,14 +160,14 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Audio
 
 [EditorStartup]
 LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/Tiles/TileBlueprint.TileBlueprint
+OpenAssetsAtExit=/Game/Blueprints/Target.Target
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1975,7 +1975,7 @@ Info="\"Object.\" \"Object.\" "
 HUDWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 GeometryCacheComponent="\"Object.Collision.BodyInstance\" "
 NewTarget_C=
-Target_C="\"Object.Default.Waypoints\" "
+Target_C="\"Object.Default.\" "
 AtmosphericFog="\"Object.Atmosphere.AtmosphericFogComponent.Object.DefaultLightColor\" "
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstScale\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleSpawnBase="\"Object.Spawn.SpawnPerUnit\" \"Object.Spawn.SpawnPerUnit.Distribution\" "
@@ -2095,7 +2095,7 @@ UNR=../../../../../../Users/Tyler/Documents/GitHub/mgp-mgp-group-11/Development/
 BRUSH=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
 FBX=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
 FBXAnim=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
-GenericImport=../../../../../../Users/Tyler/Desktop/BulletDestroy.wav
+GenericImport=../../../../../../Users/Tyler/Desktop/ShootSound.wav
 GenericExport=../../../../../../Users/Tyler/Desktop/TileSet.TGA
 GenericOpen=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
 GenericSave=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
