Added Pause Button and Menu

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,13 +89,13 @@ CurrentPosGridSize=9
 CurrentRotGridSize=6
 
 [MRU]
-MRUItem0=/Game/Levels/Level1
-MRUItem1=/Game/Levels/Level6
-MRUItem2=/Game/Levels/BaseLevel
-MRUItem3=/Game/Levels/Level5
-MRUItem4=/Game/Levels/Level4
-MRUItem5=/Game/Levels/Level3
-MRUItem6=/Game/Levels/Level2
+MRUItem0=/Game/Levels/Level6
+MRUItem1=/Game/Levels/Level5
+MRUItem2=/Game/Levels/Level4
+MRUItem3=/Game/Levels/Level3
+MRUItem4=/Game/Levels/Level2
+MRUItem5=/Game/Levels/Level1
+MRUItem6=/Game/Levels/BaseLevel
 MRUItem7=/Game/Levels/MainMenu
 MRUItem8=/Game/Levels/BaseLevel_5
 MRUItem9=/Game/Levels/Level_2
@@ -163,11 +163,12 @@ AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Audio
 
 [EditorStartup]
-LastLevel=/Game/Levels/MainMenu
+LastLevel=/Game/Levels/Level6
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/Target.Target
+OpenAssetsAtExit=/Game/Blueprints/Widgets/HUDWidget.HUDWidget
+OpenAssetsAtExit=/Game/Blueprints/Widgets/PauseWidget.PauseWidget
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1899,6 +1900,7 @@ SoundWave.Effects=True
 /Game/Sprites/TileTriangleSingle.TileTriangleSingle=1
 /Game/Sprites/TileSingle.TileSingle=1
 /Game/Audio/BulletDestroy.BulletDestroy=1
+/Game/Textures/GameOverScreenPictures/background.Background=1
 
 [DetailPropertyExpansion]
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
@@ -1906,7 +1908,7 @@ MeshComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" "
 SceneComponent="\"Object.Collision.BodyInstance\" "
 ActorComponent="\"Object.Collision.BodyInstance\" "
-Object=
+Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 StaticMeshActor=
 2DSideScrollerCharacter_C=
 PaperCharacter=
@@ -2754,7 +2756,7 @@ LevelButtonWidget_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.D
 IntProperty=ArrayProperty.DefaultValueCategory.None,
 K2Node_VariableSet=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 TileBlueprint_C=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
-ObjectProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+ObjectProperty=
 BoolProperty=
 NewTarget_C=
 BounceGamemode_C=ArrayProperty.DefaultValueCategory.None,
